Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -667,7 +667,7 @@
    "source": [
     "#Your code here\n",
     "plt.figure(figsize=(20,15))\n",
-    "nx.draw(G, )"
+    "nx.draw(G, no)"
    ]
   },
   {
